added main weather info and components

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "ionicWeatherApp",
   "appName": "weather",
   "bundledWebRuntime": false,
   "npmClient": "npm",
